Bug 406220 - Crash when deleting more than 5000 transactions at once
Summary: Crash when deleting more than 5000 transactions at once
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-04 15:21 UTC by Thomas Baumgart
Modified: 2019-04-04 18:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-04-04 15:21:52 UTC
SUMMARY
While deleting around 5800 transactions in one account at once KMyMoney crashes.

STEPS TO REPRODUCE
1. Open ledger of account
2. Select all transactions using Ctrl+A
3. Open context menu and select "Delete transactions"

OBSERVED RESULT
Operation starts (progress bar starts moving) and then crashes

EXPECTED RESULT
Should not crash but finish operation


ADDITIONAL INFORMATION
It seems that this happened on a transaction with two splits in the account and depends on the data on file.
Comment 1 Thomas Baumgart 2019-04-04 18:00:36 UTC
Git commit a4a39821bbea41228f6f7ee49d1d97f6f006ea8e by Thomas Baumgart.
Committed on 04/04/2019 at 18:00.
Pushed by tbaumgart into branch '5.0'.

Avoid crash when removing items from container
FIXED-IN: 5.0.4

M  +14   -10   kmymoney/views/kgloballedgerview_p.h

https://commits.kde.org/kmymoney/a4a39821bbea41228f6f7ee49d1d97f6f006ea8e