Avoid crash when removing items from container

BUG: 406220
FIXED-IN: 5.0.4